<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E4461"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/addDisasterBtn"
        android:layout_width="193dp"
        android:layout_height="167dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="@color/myblue"
        android:text="@string/Disasterbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="329dp"
        android:layout_height="74dp"
        android:layout_marginTop="44dp"
        android:background="#869A85BF"
        android:text="@string/app_name"
        android:textColor="@color/myred"
        android:textColorHint="@color/white"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/contactBtn"
        android:layout_width="191dp"
        android:layout_height="167dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="203dp"
        android:layout_marginEnd="7dp"
        android:layout_marginBottom="243dp"
        android:backgroundTint="@color/myred"
        android:text="@string/Contactbtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addDisasterBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>